Sun Jul 27 01:40:39 BST 2003  Olly Betts <olly@survex.com>

	* tests/api_db.cc: Check termfreq in allterms4.

Sun Jul 27 01:39:57 BST 2003  Olly Betts <olly@survex.com>

	* extra/queryparsertest.cc: Fixed for relocated queryparser.h.

Sun Jul 27 00:59:56 BST 2003  Olly Betts <olly@survex.com>

	* .cvsignore,backends/quartz/.cvsignore,extra/.cvsignore: Updated.

Sun Jul 27 00:19:11 BST 2003  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Oops, failed to remove btreecheck.cc reference
	  in previous check-in.

Sat Jul 26 23:36:01 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/Makefile.am,bin/Makefile.am,tests/Makefile.am:
	  Hopefully fixed "make dist" in VPATH builds.

Sat Jul 26 22:58:27 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/Makefile.am: Need to distribute btreecheck.cc.

Sat Jul 26 20:05:47 BST 2003  Olly Betts <olly@survex.com>

	* xapian-config.in,extra/Makefile.am,extra/queryparser.h,
	  extra/queryparser.yy,extra/xapian/queryparser.h: Sorted out
	  xapian-config so it handles using QueryParser too.

Sat Jul 26 19:03:04 BST 2003  Olly Betts <olly@survex.com>

	* xapian-config.in: Updated logic in --libs and --cxxflags in line
	  with recent change in --ltlibs.

Sat Jul 26 18:31:11 BST 2003  Olly Betts <olly@survex.com>

	* xapian-config.in: Reworked logic for finding libxapian.la in
	  --ltlibs - it may not yet exist in the non-installed case.
	* m4/xapian.m4: Don't pass --libs when checking if xapian-config
	  works as it will fail in the non-installed case.

Sat Jul 26 01:25:46 BST 2003  Olly Betts <olly@survex.com>

	* NEWS: Updated.

Fri Jul 25 10:20:18 BST 2003  Olly Betts <olly@survex.com>

	* NEWS: Updated in preparation for 0.7.3 release.

Thu Jul 24 23:20:14 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_alltermslist.cc,
	  backends/quartz/quartz_alltermslist.h,tests/api_db.cc:
	  Fixed allterms TermIterator to not give duplicate terms with a